[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email-agent-env"
version = "0.1.2"
description = "Email Agent Environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openai"
]

[tool.setuptools.packages.find]
include = ["env*"]
